Ajustes no openapi, rotas e controladores
